# ComfyUI-SUPIR

./: .gitignore  CKPT_PTH.py  LICENSE  README.md  __init__.py  nodes.py  nodes_v2.py  pyproject.toml  requirements.txt
SUPIR/: util.py
SUPIR/models/: SUPIR_model.py  SUPIR_model_v2.py
SUPIR/modules/: SUPIR_v0.py
SUPIR/utils/: devices.py  tilevae.py
example_workflows/: supir_lightning_example_02.json
examples/: super_lightning_example_02.json  supir-(separate-clip)-workflow.json  supir_tiled_example_01.json  supir_upscale_example_lightning_10steps.json
options/: SUPIR_v0.yaml  SUPIR_v0_tiled.yaml
sgm/: util.py
sgm/models/: autoencoder.py  diffusion.py
sgm/modules/: __init__.py  attention.py
sgm/modules/autoencoding/lpips/loss/: lpips.py
sgm/modules/autoencoding/lpips/model/: model.py
sgm/modules/diffusionmodules/: guiders.py  model.py  openaimodel.py  sampling.py  util.py  wrappers.py
sgm/modules/encoders/: modules.py
