[project]
name = "comfyui-supir"
description = "Wrapper nodes to use SUPIR upscaling process in ComfyUI"
version = "1.0.0"
license = "LICENSE"
dependencies = ["transformers>=4.28.1", "fsspec>=2023.4.0", "kornia>=0.6.9", "open-clip-torch>=2.17.1", "Pillow>=9.4.0", "pytorch-lightning>=2.2.1", "omegaconf", "accelerate"]

[project.urls]
Repository = "https://github.com/kijai/ComfyUI-SUPIR"

[tool.comfy]
PublisherId = "kijai"
DisplayName = "ComfyUI-SUPIR"
Icon = ""
